# stokowski

./: pyproject.toml
stokowski/: config.py  linear.py  main.py  orchestrator.py  prompt.py  runner.py
